[project]
name = "scorer"
version = "0.1.0"
description = "SCORER: Stackelberg Coupling of Online Representation Learning and Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax[cuda12]<=0.4.28",
    "chex>=0.1.90",
    "distrax>=0.1.5",
    "flashbax>=0.1.3",
    "flax>=0.10.4",
    "gymnax>=0.0.9",
    "mujoco==2.2.2",
    "optax>=0.2.5",
    "tyro>=0.9.31",
    "wandb>=0.21.3",
    "brax==0.9.1",
    "navix>=0.7.4",
    "rlax>=0.1.7",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]

atari = [
    "gym==0.23.1",
    "envpool==0.8.4",
    "gymnax==0.0.5"
]
